[gd_scene load_steps=4 format=3 uid="uid://dy6ftlhd7yd7w"]

[ext_resource type="Script" uid="uid://cw5xbsnck3pwx" path="res://addons/owens-godot-framework/tools/scripts/controllers/owen-melee-attack.gd" id="1_7g2vp"]
[ext_resource type="PackedScene" uid="uid://dx3c3tuys3m1d" path="res://addons/owens-godot-framework/tools/assets/basic_color_tile.tscn" id="2_r6s8g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7g2vp"]
size = Vector2(58, 87)

[node name="OwenMeleeAttack" type="Node2D"]
script = ExtResource("1_7g2vp")

[node name="CooldownTimer" type="Timer" parent="."]

[node name="AttackZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(65, 0)
shape = SubResource("RectangleShape2D_7g2vp")

[node name="BasicColorTile" parent="AttackZone/CollisionShape2D" instance=ExtResource("2_r6s8g")]
modulate = Color(1, 1, 1, 0.12156863)
position = Vector2(-1.4305115e-06, -1.9073486e-06)
scale = Vector2(56.000004, 84)
